<resources>
    <string name="app_name">رحلة اسم الفاعل</string>
    <string name="app_tagline">أتقن القاعدة... وكن بطلًا!</string>
    <string name="teacher_credit">إعداد وتصميم الأستاذ : حسين سيد</string>
    <string name="loading_game">جارٍ تحميل اللعبة...</string>
    <string name="no_internet_title">لا يوجد اتصال بالإنترنت</string>
    <string name="no_internet_desc">تعذر الاتصال بخادم اللعبة. يرجى التحقق من اتصال الشبكة ثم إعادة المحاولة.</string>
    <string name="btn_retry">إعادة المحاولة 🔄</string>
    <string name="still_offline">لا يزال الاتصال بالإنترنت غير متاح.</string>
    <string name="exit_dialog_title">الخروج من اللعبة</string>
    <string name="exit_dialog_message">هل تريد حقًا الخروج من رحلة اسم الفاعل؟</string>
    <string name="exit_dialog_yes">خروج</string>
    <string name="exit_dialog_cancel">متابعة اللعب</string>
</resources>
